- Added options --fix and --pid to plugin "continuity".

- Added option --after-packets to plugin "filter".

- Added options --default-interface to input plugin "ip" and plugin "mpeinject".

- Added options --inter-time, --max-insert-count, --min-pts, --max-pts and
  --pts-pid to plugin "mux".

- Input plugin "file" can now read more than one file. Input files are
  concatenated as input stream.

Version 3.9-619

- Added plugins mpe and mpeinject to respectively extract and inject MPE
  (Multi-Protocol Encapsulation) datagrams to/from UDP/IP. A complete example
  is provided in the user's guide.

- Added options --add-start-stuffing and --add-stop-stuffing to tsp.

- Added options --sei-avc and --uuid-sei to plugin pes.

- Added options --add-programinfo-id, --set-stream-identifier, --set-cue-type
  and --set-data-broadcast-id to plugin pmt.

- Added option --identify to plugin t2mi.

- Added options --all-once, --pack-all-sections and --pack-and-flush to tstables
  and plugin tables.

- Added option --default-charset to tsanalyze and plugin analyze.

- Added signalization for data broadcast and MPE.

- Improved display of Dektec devices capabilities.

- In all TSDuck commands, parameters can be read from a file using the syntax
  "@filename" anywhere in the command line. See the user's guide for details.

- Bug fix in tstables and plugin tables: When all sections were collected
  (option --all), the sections were not properly saved in binary section files
  (option --binary).

- Bug fix on Windows: Command "tsversion --upgrade" failed because tsversion.exe
  and tsduck.dll were locked by upgrade command.

- Bug fix on Linux: With DVB-T tuners which do not support "auto bandwidth"
  (PCTV 492e for instance), tscan failed to scan the UHF band.

- Added possibility to specify a GitHub authentication token in tsversion to
  avoid "API rate limit exceeded" errors.

- Precompiled binaries are now provided for Raspbian on Raspberry Pi.

Version 3.8-534
